# AI-Ethics-Auditor

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  audit_domain_models.py  create_domain_models.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_demo.py  standalone_demo.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  demo_service.py  extensions.py  routes.py
app/api/: __init__.py  audit.py  auth.py  models.py  users.py
app/middleware/: error_handlers.py
app/models/: __init__.py  audit.py  model.py  token_blocklist.py  user.py
app/services/: __init__.py  audit_service.py  model_service.py  report_service.py
app/static/css/: style.css
app/static/js/: app.js  main.js
app/templates/: audit-details.html  audit_detail.html  audits.html  base.html  create-audit.html  index.html  login.html  model-details.html  models.html
app/utils/: errors.py  pagination.py  security.py  validators.py
app/web/: __init__.py  routes.py
data/: app.db  audit_report.json  demo_data.json  demo_model.json  finance_data.csv  healthcare_data.csv  hr_data.csv  marketing_data.csv  sample_data.py  testing_data.csv
data/models/: demo_model.pkl  finance_model.pkl  healthcare_model.pkl  hr_model.pkl  marketing_model.pkl
scripts/: run_demo.py  run_sample_audit.py  train_sample_model.py
tests/: __init__.py  conftest.py  test_audit_api.py  test_audits_api.py  test_auth.py  test_models_api.py  test_security.py
